--- a/src/resources/translations/en.properties
+++ b/src/resources/translations/en.properties
@@ -1,10 +1,11 @@
-#Mon Mar 07 16:45:59 CLST 2022
+#Sun May 07 14:28:20 CLT 2023
 addons.${name}.checkAddOn=Build add-on
 addons.${name}.menuItemInfo=Menu item info
 addons.${name}.importTranslations=Import Translations
 addons.${name}.encodeTranslations=Encode translations
 addons.${name}.releaseAddOn=Package add-on for publication
 addons.${name}=Developer Tools
+addons.${name}.generateAddonsPropertiesMap=Generate addons properties map
 OptionPanel.${name}_downloadUrl=Download URL
 addons.${name}.insertBinary=Insert Binary
 OptionPanel.${name}_addonsMenu.tooltip=Defines the addon's main menu location in Freeplane's UI, defaults menu 'main_menu_scripting'
