--- a/src/resources/translations/de.properties
+++ b/src/resources/translations/de.properties
@@ -1,4 +1,4 @@
-#Mon Mar 07 16:45:59 CLST 2022
+#Sun May 07 14:28:20 CLT 2023
 addons.${name}.checkAddOn=Komplettiere Add-on
 addons.${name}.menuItemInfo=Men\\u00FCeintrag-Details
 addons.${name}.importTranslations=\\u00DCbersetzungen importieren
