--- a/src/resources/translations/es.properties
+++ b/src/resources/translations/es.properties
@@ -1,4 +1,4 @@
-#Mon Mar 07 16:45:59 CLST 2022
+#Sun May 07 14:28:20 CLT 2023
 addons.${name}.checkAddOn=Construir add-on
 addons.${name}.menuItemInfo=Información de ítem de menú
 addons.${name}.importTranslations=Importar traducciones
