--- a/src/resources/translations/nl.properties
+++ b/src/resources/translations/nl.properties
@@ -1,4 +1,4 @@
-#Mon Mar 07 16:45:59 CLST 2022
+#Sun May 07 14:28:20 CLT 2023
 addons.${name}.checkAddOn=Add-on opbouwen
 addons.${name}.menuItemInfo=Menu item info
 addons.${name}.encodeTranslations=Vertalingen coderen
